Header formatting/ sidebar functionality

--- a/public/css/theme-colors.css
+++ b/public/css/theme-colors.css
@@ -7,3 +7,10 @@
     --color-bg: #131313;
     --color-text: #ffffff;
 }
+*{
+    background-color: var(--color-bg);
+    color: var(--color-text);
+}
+button[data-theme-toggle]{
+    cursor: pointer;
+}
