--- a/public/css/nav-bar.css
+++ b/public/css/nav-bar.css
@@ -1,16 +1,18 @@
-header,
-img {
-  outline: 1px solid var(--color-text);
-}
 header {
   display: flex;
   width: 100%;
   height: fit-content;
-  padding: 0.5rem;
 }
 header > nav {
   display: flex;
-  flex-basis: 100%;
+  border-bottom: var(--color-text) 1px solid;
+  width: 97%;
+  margin: 0 auto;
+  border-radius: 0 0 10px 10px;
+  padding: 1rem;
+}
+header > nav, header nav *{
+    background-color: var(--color-secondary);
 }
 .logo-box {
   display: flex;
@@ -32,141 +34,204 @@ header > nav {
   justify-content: flex-end;
 }
 .nav-list-box > ul {
-    display: none;
+  display: none;
+  list-style-type: none;
 }
-.show-sidebar-btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
+.nav-list-box > ul > li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
 }
-.sidebar-menu-container{
-    display: none;
-    position: absolute;
-    z-index: 5;
-    width: 100%;
-    height: 100%;
+.nav-list-box > ul > li:nth-child(-n + 3) {
+  flex-basis: calc(70% / 3);
 }
-.sidebar-menu-container > .content{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
+.nav-list-box > ul > li:nth-child(n + 4) {
+  flex-basis: 10%;
 }
-.sidebar-enabled{
-    display: flex;
+.show-sidebar-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+}
+.sidebar-menu-container {
+  display: none;
+  position: absolute;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+}
+.sidebar-menu-container *{
+    background-color: var(--color-accent);
+}
+.sidebar-menu-container > .content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.sidebar-enabled {
+  display: flex;
 }
 
-.nav-list-box > ul > li > a{
-    display: block;
-    cursor: pointer;
-    text-decoration: none;
+.nav-list-box > ul > li > a {
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  border-right: 1px solid var(--color-text);
+  text-transform: uppercase;
+}
+.nav-list-box > ul > li > a > p {
+  font-size: 110%;
+}
+.nav-list-box > ul > li > button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 80%;
+  max-width: 40px;
+  max-height: 40px;
+  border: none;
+}
+.nav-list-box > ul > li > button > img {
+  width: 80%;
+  height: 80%;
+  min-width: 30px;
+  min-height: 30px;
+}
+.nav-list-box > ul > li > a > img {
+  width: 80%;
+  height: 80%;
 }
 
-.sidebar-showing-animation{
-    animation: show-sidebar 0.3s linear 1;
+.sidebar-showing-animation {
+  animation: show-sidebar 0.3s linear 1;
 }
-.sidebar-hiding-animation{
-    animation: hide-sidebar 0.3s linear 1;
+.sidebar-hiding-animation {
+  animation: hide-sidebar 0.3s linear 1;
 }
 
 /* Media Query for Mobile Devices*/
 @media (max-width: 480px) {
-  .logo-box, .nav-list-box{
+  .logo-box,
+  .nav-list-box {
     flex-basis: 50%;
   }
-  .logo-box > a{
-    width: 210px;
+  .logo-box > a {
+    width: 260px;
     height: 50px;
-}
+  }
 }
 
 /* Media Query for low resolution  Tablets, Ipads */
 @media (min-width: 481px) and (max-width: 767px) {
-    .logo-box, .nav-list-box{
-        flex-basis: 50%;
-    }
-    .logo-box > a{
-        width: 210px;
-        height: 50px;
-    }
+  .logo-box,
+  .nav-list-box {
+    flex-basis: 50%;
+  }
+  .logo-box > a {
+    width: 260px;
+    height: 50px;
+  }
 }
 
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 768px) and (max-width: 1024px) {
-    .logo-box{
-        flex-basis: 40%;
-    }
-    .nav-list-box{
-        flex-basis: 60%;
-    }
-    .logo-box > a{
-        width: 260px;
-        height: 60px;
-    }
-    .nav-list-box > ul {
-        display: flex;
-        justify-content: space-evenly;
-        list-style-type: none;
-        height: 100%;
-        width: 100%;
-    }
-    .show-sidebar-btn{
-        display: none;
-    }
-    .sidebar-menu-container{
-        display: none;
-    }
+  .logo-box {
+    flex-basis: 40%;
+  }
+  .nav-list-box {
+    flex-basis: 60%;
+  }
+  .logo-box > a {
+    width: 260px;
+    height: 50px;
+  }
+  .nav-list-box > ul {
+    display: flex;
+    list-style-type: none;
+    height: 100%;
+    width: 100%;
+  }
+  .show-sidebar-btn {
+    display: none;
+  }
+  .sidebar-menu-container {
+    display: none;
+  }
 }
 
 /* Media Query for Laptops and Desktops */
 @media (min-width: 1025px) and (max-width: 1280px) {
-    .logo-box{
-        flex-basis: 40%;
-    }
-    .nav-list-box{
-        flex-basis: 60%;
-    }
-    .logo-box > a{
-        width: 260px;
-        height: 60px;
-    }
-    .sidebar-menu-container{
-        display: none;
-    }
+  .logo-box {
+    flex-basis: 40%;
+  }
+  .nav-list-box {
+    flex-basis: 60%;
+  }
+  .logo-box > a {
+    width: 310px;
+    height: 60px;
+  }
+  .nav-list-box > ul {
+    display: flex;
+    height: 100%;
+    width: 100%;
+  }
+  .show-sidebar-btn {
+    display: none;
+  }
+  .sidebar-menu-container {
+    display: none;
+  }
 }
 
 /* Media Query for Large screens */
 @media (min-width: 1281px) {
-    .logo-box{
-        flex-basis: 40%;
-    }
-    .nav-list-box{
-        flex-basis: 60%;
-    }
-    .logo-box > a{
-        width: 260px;
-        height: 60px;
-    }
-    .sidebar-menu-container{
-        display: none;
-    }
+  .logo-box {
+    flex-basis: 40%;
+  }
+  .nav-list-box {
+    flex-basis: 60%;
+  }
+  .logo-box > a {
+    width: 310px;
+    height: 60px;
+  }
+  .nav-list-box > ul {
+    display: flex;
+    height: 100%;
+    width: 100%;
+  }
+  .show-sidebar-btn {
+    display: none;
+  }
+  .sidebar-menu-container {
+    display: none;
+  }
 }
 
-@keyframes show-sidebar{
-    from{
-        right: -100%;
-    }
-    to{
-        right: 0;
-    }
+@keyframes show-sidebar {
+  from {
+    right: -100%;
+  }
+  to {
+    right: 0;
+  }
 }
-@keyframes hide-sidebar{
-    from{
-        right: 0;
-    }
-    to{
-        right: -100%;
-    }
+@keyframes hide-sidebar {
+  from {
+    right: 0;
+  }
+  to {
+    right: -100%;
+  }
 }
