--- a/public/css/theme-colors.css
+++ b/public/css/theme-colors.css
@@ -1,4 +1,4 @@
-[data-theme="light"] {
+/* [data-theme="light"] {
     --color-bg: #ffffff;
     --color-text: #000000;
 }
@@ -6,11 +6,25 @@
 [data-theme="dark"] {
     --color-bg: #131313;
     --color-text: #ffffff;
+} */
+[data-theme="light"] {
+  --color-text: #140e20;
+  --color-bg: #f7f5fa;
+  --color-primary: #3c2c63;
+  --color-secondary: #c987b9;
+  --color-accent: #a24965;
 }
-*{
-    background-color: var(--color-bg);
-    color: var(--color-text);
+[data-theme="dark"] {
+  --color-text: #e5dff1;
+  --color-bg: #0f0f0f;
+  --color-primary: #ac9cd3;
+  --color-secondary: #783667;
+  --color-accent: #b65d79;
 }
-button[data-theme-toggle]{
-    cursor: pointer;
+* {
+  background-color: var(--color-bg);
+  color: var(--color-text);
+}
+button[data-theme-toggle] {
+  cursor: pointer;
 }
