--- a/public/css/resetting.css
+++ b/public/css/resetting.css
@@ -9,6 +9,13 @@ html, body{
     width: 100vw;
     height: 100vh;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+body{
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 button{
     cursor: pointer;
