--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,10 +1,12 @@
 footer {
   display: flex;
   width: 100%;
+  height: fit-content;
   background-color: var(--secondary);
   color: var(--text);
   padding: 1rem;
   flex-wrap: wrap;
+  border-top: 1px solid var(--text);
 }
 footer * {
   background-color: var(--secondary);
