--- a/public/css/resetting.css
+++ b/public/css/resetting.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Cabin";
+    font-family: "Rubik";
 }
 html, body{
     width: 100vw;
