--- a/public/css/theme-colors.css
+++ b/public/css/theme-colors.css
@@ -1,16 +1,16 @@
 [data-theme="light"] {
   --text: #080d21;
   --background: #e1e4eb;
-  --primary: #3d53d1;
-  --secondary: #e48b94;
-  --accent: #d9a85e;
+  --primary: #484ec1;
+  --secondary: #575fff;
+  --accent: #72a1f6;
 }
 [data-theme="dark"] {
   --text: #dee3f7;
   --background: #0b0c0f;
-  --primary: #2e44c2;
-  --secondary: #741b24;
-  --accent: #a17026;
+  --primary: #323d7c;
+  --secondary: #212689;
+  --accent: #5371a9;
 }
 * {
   background-color: var(--background);
