--- a/public/css/nav-bar.css
+++ b/public/css/nav-bar.css
@@ -8,8 +8,9 @@ header > nav {
   width: 100%;
   padding: 1rem;
 }
-header > nav, header nav *{
-    background-color: var(--secondary);
+header > nav,
+header nav * {
+  background-color: var(--secondary);
 }
 .logo-box {
   display: flex;
@@ -40,14 +41,14 @@ header > nav, header nav *{
   justify-content: center;
   align-items: center;
   width: fit-content;
-  padding: .5rem;
+  padding: 0.5rem;
   font-size: 80%;
 }
-.nav-list-box > ul > li:not(:last-child){
+.nav-list-box > ul > li:not(:last-child) {
   border-right: 1px solid var(--text);
 }
 
-.nav-list-box > ul > li  a {
+.nav-list-box > ul > li a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,7 +81,7 @@ header > nav, header nav *{
 .nav-list-box > ul > li:nth-child(n + 4) {
   flex-basis: calc(35% / 3);
 }
-.account-logo-box{
+.account-logo-box {
   position: relative;
   max-width: 40px;
   min-width: 40px;
@@ -89,12 +90,13 @@ header > nav, header nav *{
   border-radius: 50%;
   overflow: hidden;
 }
-.account-logo-box img{
+.account-logo-box img {
   position: absolute;
   width: 100%;
   height: 100%;
 }
-.shopping-basket-logo-box span, .account-logo-box span{
+.shopping-basket-logo-box span,
+.account-logo-box span {
   font-size: xx-large;
 }
 .show-sidebar-btn {
@@ -112,8 +114,8 @@ header > nav, header nav *{
   width: 100%;
   height: 100%;
 }
-.sidebar-menu-container *{
-    background-color: var(--accent);
+.sidebar-menu-container * {
+  background-color: var(--accent);
 }
 .sidebar-menu-container > .content {
   display: flex;
@@ -122,14 +124,14 @@ header > nav, header nav *{
   height: 100%;
   position: relative;
 }
-.close-button-box{
+.close-button-box {
   position: absolute;
   right: 10px;
   top: 10px;
   width: fit-content;
   height: fit-content;
 }
-.close-button-box > button{
+.close-button-box > button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,18 +141,18 @@ header > nav, header nav *{
   font-size: x-large;
 }
 
-.sidebar-list-box{
+.sidebar-list-box {
   display: flex;
   position: absolute;
   top: 50px;
 }
-.sidebar-list-box > ul{
+.sidebar-list-box > ul {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
 }
-.sidebar-list-box > ul > li{
+.sidebar-list-box > ul > li {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -160,19 +162,20 @@ header > nav, header nav *{
   font-size: x-large;
   text-decoration: none;
 }
-.sidebar-list-box > ul > li:not(:last-child){
+.sidebar-list-box > ul > li:not(:last-child) {
   border-bottom: var(--text) 1px solid;
 }
-.sidebar-list-box > ul > li > button{
+.sidebar-list-box > ul > li > button {
   width: fit-content;
   height: fit-content;
   border: none;
 }
-.sidebar-list-box > ul > li > button > img{
+.sidebar-list-box > ul > li > button > img {
   width: 30px;
   height: 30px;
 }
-.sidebar-list-box > ul > li > .account-logo-box, .sidebar-list-box > ul > li > .shopping-basket-logo-box{
+.sidebar-list-box > ul > li > .account-logo-box,
+.sidebar-list-box > ul > li > .shopping-basket-logo-box {
   text-decoration: none;
   display: flex;
   justify-content: flex-start;
@@ -185,14 +188,14 @@ header > nav, header nav *{
   border-radius: 50%;
   overflow: hidden;
 }
-.sidebar-list-box > ul > li > a > span{
+.sidebar-list-box > ul > li > a > span {
   max-width: 50px;
   min-width: 50px;
   min-height: 50px;
   max-height: 50px;
   font-size: 200%;
 }
-.sidebar-list-box > ul > li > .account-logo-box > .user-image{
+.sidebar-list-box > ul > li > .account-logo-box > .user-image {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -246,7 +249,7 @@ header > nav, header nav *{
 }
 
 /* Media Query for Laptops, Desktops and more*/
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1025px) {
   .logo-box {
     flex-basis: 40%;
   }
@@ -258,7 +261,7 @@ header > nav, header nav *{
     height: 100%;
     width: 100%;
   }
-  .nav-list-box > ul > li{
+  .nav-list-box > ul > li {
     font-size: 90%;
   }
   .logo-box > a {
@@ -272,7 +275,6 @@ header > nav, header nav *{
     display: none;
   }
 }
-
 
 @keyframes show-sidebar {
   from {
