--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -20,7 +20,7 @@ body{
 button{
     cursor: pointer;
 }
-i[class*=fa]::before{
-    background: transparent;
+.bi{
+    background-color: transparent !important;
 }
 
