--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -21,6 +21,14 @@ button{
     cursor: pointer;
 }
 .bi{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: transparent !important;
 }
+@media screen and (min-width: 1600px) {
+    body{
+        font-size: 130%;
+    }
+  }
 
